@@ -89,6 +89,9 @@ public class AdminRoutes {
         router.add(GET,  "/requests/unmatched", FindUnmatchedRequestsTask.class);
         router.add(GET,  "/requests/unmatched/near-misses", FindNearMissesForUnmatchedTask.class);
         router.add(GET,  "/requests/{id}", GetServedStubTask.class);
+        router.add(DELETE, "/requests/{id}", RemoveServeEventTask.class);
+        router.add(POST, "/requests/remove", RemoveServeEventsByRequestPatternTask.class);
+        router.add(POST, "/requests/remove-by-metadata", RemoveServeEventsByStubMetadataTask.class);
 
         router.add(POST, "/recordings/snapshot", SnapshotTask.class);
         router.add(POST, "/recordings/start", StartRecordingTask.class);
@@ -99,12 +102,17 @@ public class AdminRoutes {
         router.add(POST, "/near-misses/request", FindNearMissesForRequestTask.class);
         router.add(POST, "/near-misses/request-pattern", FindNearMissesForRequestPatternTask.class);
 
+        router.add(GET, "/settings", GetGlobalSettingsTask.class);
+        router.add(PUT, "/settings", GlobalSettingsUpdateTask.class);
         router.add(POST, "/settings", GlobalSettingsUpdateTask.class);
+        router.add(PATCH, "/settings/extended", PatchExtendedSettingsTask.class);
+
         router.add(POST, "/shutdown", ShutdownServerTask.class);
 
-        router.add(GET, "/docs/raml", GetRamlSpecTask.class);
         router.add(GET, "/docs/swagger", GetSwaggerSpecTask.class);
         router.add(GET, "/docs", GetDocIndexTask.class);
+
+        router.add(GET, "/certs/wiremock-ca.crt", GetCaCertTask.class);
     }
 
     protected void initAdditionalRoutes(Router routeBuilder) {
@@ -157,7 +165,7 @@ public class AdminRoutes {
         @Override
         public void add(RequestMethod method, String urlTemplate, Class<? extends AdminTask> taskClass) {
             try {
-                AdminTask task = taskClass.newInstance();
+                AdminTask task = taskClass.getDeclaredConstructor().newInstance();
                 add(requestSpec(method, urlTemplate), task);
             } catch (Exception e) {
                 throwUnchecked(e);
