@@ -16,6 +16,8 @@
 package com.github.tomakehurst.wiremock.standalone;
 
 import com.github.tomakehurst.wiremock.common.*;
+import com.github.tomakehurst.wiremock.common.ssl.KeyStoreSettings;
+import com.github.tomakehurst.wiremock.common.ssl.KeyStoreSourceFactory;
 import com.github.tomakehurst.wiremock.core.MappingsSaver;
 import com.github.tomakehurst.wiremock.core.Options;
 import com.github.tomakehurst.wiremock.core.WireMockApp;
@@ -35,6 +37,8 @@ import com.github.tomakehurst.wiremock.security.BasicAuthenticator;
 import com.github.tomakehurst.wiremock.security.NoAuthenticator;
 import com.github.tomakehurst.wiremock.verification.notmatched.NotMatchedRenderer;
 import com.github.tomakehurst.wiremock.verification.notmatched.PlainTextStubNotMatchedRenderer;
+import com.google.common.annotations.VisibleForTesting;
+import com.google.common.base.Joiner;
 import com.google.common.base.Optional;
 import com.google.common.base.Strings;
 import com.google.common.collect.*;
@@ -48,7 +52,10 @@ import java.net.URI;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
+import static com.github.tomakehurst.wiremock.common.BrowserProxySettings.DEFAULT_CA_KESTORE_PASSWORD;
+import static com.github.tomakehurst.wiremock.common.BrowserProxySettings.DEFAULT_CA_KEYSTORE_PATH;
 import static com.github.tomakehurst.wiremock.common.Exceptions.throwUnchecked;
 import static com.github.tomakehurst.wiremock.common.ProxySettings.NO_PROXY;
 import static com.github.tomakehurst.wiremock.core.WireMockApp.MAPPINGS_ROOT;
@@ -57,19 +64,23 @@ import static com.github.tomakehurst.wiremock.http.CaseInsensitiveKey.TO_CASE_IN
 
 public class CommandLineOptions implements Options {
 
-	private static final String HELP = "help";
+    private static final String HELP = "help";
 	private static final String RECORD_MAPPINGS = "record-mappings";
 	private static final String MATCH_HEADERS = "match-headers";
 	private static final String PROXY_ALL = "proxy-all";
     private static final String PRESERVE_HOST_HEADER = "preserve-host-header";
     private static final String PROXY_VIA = "proxy-via";
-	private static final String PORT = "port";
+    private static final String PORT = "port";
+    private static final String DISABLE_HTTP = "disable-http";
     private static final String BIND_ADDRESS = "bind-address";
     private static final String HTTPS_PORT = "https-port";
     private static final String HTTPS_KEYSTORE = "https-keystore";
     private static final String HTTPS_KEYSTORE_PASSWORD = "keystore-password";
+    private static final String HTTPS_KEYSTORE_TYPE = "keystore-type";
+    private static final String HTTPS_KEY_MANAGER_PASSWORD = "key-manager-password";
     private static final String HTTPS_TRUSTSTORE = "https-truststore";
     private static final String HTTPS_TRUSTSTORE_PASSWORD = "truststore-password";
+    private static final String HTTPS_TRUSTSTORE_TYPE = "truststore-type";
     private static final String REQUIRE_CLIENT_CERT = "https-require-client-cert";
     private static final String VERBOSE = "verbose";
     private static final String ENABLE_BROWSER_PROXYING = "enable-browser-proxying";
@@ -82,6 +93,7 @@ public class CommandLineOptions implements Options {
     private static final String JETTY_ACCEPT_QUEUE_SIZE = "jetty-accept-queue-size";
     private static final String JETTY_HEADER_BUFFER_SIZE = "jetty-header-buffer-size";
     private static final String JETTY_STOP_TIMEOUT = "jetty-stop-timeout";
+    private static final String JETTY_IDLE_TIMEOUT = "jetty-idle-timeout";
     private static final String ROOT_DIR = "root-dir";
     private static final String CONTAINER_THREADS = "container-threads";
     private static final String GLOBAL_RESPONSE_TEMPLATING = "global-response-templating";
@@ -90,25 +102,43 @@ public class CommandLineOptions implements Options {
     private static final String ADMIN_API_REQUIRE_HTTPS = "admin-api-require-https";
     private static final String ASYNCHRONOUS_RESPONSE_ENABLED = "async-response-enabled";
     private static final String ASYNCHRONOUS_RESPONSE_THREADS = "async-response-threads";
+    private static final String USE_CHUNKED_ENCODING = "use-chunked-encoding";
+    private static final String MAX_TEMPLATE_CACHE_ENTRIES = "max-template-cache-entries";
+    private static final String PERMITTED_SYSTEM_KEYS = "permitted-system-keys";
+    private static final String DISABLE_GZIP = "disable-gzip";
+    private static final String DISABLE_REQUEST_LOGGING = "disable-request-logging";
+    private static final String ENABLE_STUB_CORS = "enable-stub-cors";
+    private static final String TRUST_ALL_PROXY_TARGETS = "trust-all-proxy-targets";
+    private static final String TRUST_PROXY_TARGET = "trust-proxy-target";
+    private static final String HTTPS_CA_KEYSTORE = "ca-keystore";
+    private static final String HTTPS_CA_KEYSTORE_PASSWORD = "ca-keystore-password";
+    private static final String HTTPS_CA_KEYSTORE_TYPE = "ca-keystore-type";
+    private static final String LOAD_RESOURCES_FROM_CLASSPATH = "load-resources-from-classpath";
 
     private final OptionSet optionSet;
     private final FileSource fileSource;
     private final MappingsSource mappingsSource;
+    private final Map<String, Extension> extensions;
 
     private String helpText;
-    private Optional<Integer> resultingPort;
+    private Integer actualHttpPort;
+    private Integer actualHttpsPort;
 
     public CommandLineOptions(String... args) {
-		OptionParser optionParser = new OptionParser();
-		optionParser.accepts(PORT, "The port number for the server to listen on (default: 8080). 0 for dynamic port selection.").withRequiredArg();
+        OptionParser optionParser = new OptionParser();
+        optionParser.accepts(PORT, "The port number for the server to listen on (default: 8080). 0 for dynamic port selection.").withRequiredArg();
+        optionParser.accepts(DISABLE_HTTP, "Disable the default HTTP listener.");
         optionParser.accepts(HTTPS_PORT, "If this option is present WireMock will enable HTTPS on the specified port").withRequiredArg();
         optionParser.accepts(BIND_ADDRESS, "The IP to listen connections").withRequiredArg();
         optionParser.accepts(CONTAINER_THREADS, "The number of container threads").withRequiredArg();
         optionParser.accepts(REQUIRE_CLIENT_CERT, "Make the server require a trusted client certificate to enable a connection");
-        optionParser.accepts(HTTPS_TRUSTSTORE_PASSWORD, "Password for the trust store").withRequiredArg();
-        optionParser.accepts(HTTPS_TRUSTSTORE, "Path to an alternative truststore for HTTPS client certificates. Must have a password of \"password\".").requiredIf(REQUIRE_CLIENT_CERT).withRequiredArg();
+        optionParser.accepts(HTTPS_TRUSTSTORE_TYPE, "The HTTPS trust store type").withRequiredArg().defaultsTo("JKS");
+        optionParser.accepts(HTTPS_TRUSTSTORE_PASSWORD, "Password for the trust store").withRequiredArg().defaultsTo("password");
+        optionParser.accepts(HTTPS_TRUSTSTORE, "Path to an alternative truststore for HTTPS client certificates. Must have a password of \"password\".").requiredIf(REQUIRE_CLIENT_CERT).requiredIf(HTTPS_TRUSTSTORE_PASSWORD).withRequiredArg();
+        optionParser.accepts(HTTPS_KEYSTORE_TYPE, "The HTTPS keystore type.").withRequiredArg().defaultsTo("JKS");
         optionParser.accepts(HTTPS_KEYSTORE_PASSWORD, "Password for the alternative keystore.").withRequiredArg().defaultsTo("password");
-        optionParser.accepts(HTTPS_KEYSTORE, "Path to an alternative keystore for HTTPS. Password is assumed to be \"password\" if not specified.").requiredIf(HTTPS_TRUSTSTORE).requiredIf(HTTPS_KEYSTORE_PASSWORD).withRequiredArg().defaultsTo(Resources.getResource("keystore").toString());
+        optionParser.accepts(HTTPS_KEY_MANAGER_PASSWORD, "Key manager password for use with the alternative keystore.").withRequiredArg().defaultsTo("password");
+        optionParser.accepts(HTTPS_KEYSTORE, "Path to an alternative keystore for HTTPS. Password is assumed to be \"password\" if not specified.").requiredIf(HTTPS_KEYSTORE_PASSWORD).withRequiredArg().defaultsTo(Resources.getResource("keystore").toString());
         optionParser.accepts(PROXY_ALL, "Will create a proxy mapping for /* to the specified URL").withRequiredArg();
         optionParser.accepts(PRESERVE_HOST_HEADER, "Will transfer the original host header from the client to the proxied service");
         optionParser.accepts(PROXY_VIA, "Specifies a proxy server to use when routing proxy mapped requests").withRequiredArg();
@@ -125,6 +155,7 @@ public class CommandLineOptions implements Options {
         optionParser.accepts(JETTY_ACCEPT_QUEUE_SIZE, "The size of Jetty's accept queue size").withRequiredArg();
         optionParser.accepts(JETTY_HEADER_BUFFER_SIZE, "The size of Jetty's buffer for request headers").withRequiredArg();
         optionParser.accepts(JETTY_STOP_TIMEOUT, "Timeout in milliseconds for Jetty to stop").withRequiredArg();
+        optionParser.accepts(JETTY_IDLE_TIMEOUT, "Idle timeout in milliseconds for Jetty connections").withRequiredArg();
         optionParser.accepts(PRINT_ALL_NETWORK_TRAFFIC, "Print all raw incoming and outgoing network traffic to console");
         optionParser.accepts(GLOBAL_RESPONSE_TEMPLATING, "Preprocess all responses with Handlebars templates");
         optionParser.accepts(LOCAL_RESPONSE_TEMPLATING, "Preprocess selected responses with Handlebars templates");
@@ -132,22 +163,68 @@ public class CommandLineOptions implements Options {
         optionParser.accepts(ADMIN_API_REQUIRE_HTTPS, "Require HTTPS to be used to access the admin API");
         optionParser.accepts(ASYNCHRONOUS_RESPONSE_ENABLED, "Enable asynchronous response").withRequiredArg().defaultsTo("false");
         optionParser.accepts(ASYNCHRONOUS_RESPONSE_THREADS, "Number of asynchronous response threads").withRequiredArg().defaultsTo("10");
+        optionParser.accepts(USE_CHUNKED_ENCODING, "Whether to use Transfer-Encoding: chunked in responses. Can be set to always, never or body_file.").withRequiredArg().defaultsTo("always");
+        optionParser.accepts(MAX_TEMPLATE_CACHE_ENTRIES, "The maximum number of response template fragments that can be cached. Only has any effect when templating is enabled. Defaults to no limit.").withOptionalArg();
+        optionParser.accepts(PERMITTED_SYSTEM_KEYS, "A list of case-insensitive regular expressions for names of permitted system properties and environment vars. Only has any effect when templating is enabled. Defaults to no limit.").withOptionalArg().ofType(String.class).withValuesSeparatedBy(",");
+        optionParser.accepts(DISABLE_GZIP, "Disable gzipping of request and response bodies");
+        optionParser.accepts(DISABLE_REQUEST_LOGGING, "Disable logging of stub requests and responses to the notifier. Useful when performance testing.");
+        optionParser.accepts(ENABLE_STUB_CORS, "Enable automatic sending of CORS headers with stub responses.");
+        optionParser.accepts(TRUST_ALL_PROXY_TARGETS, "Trust all certificates presented by origins when browser proxying").availableIf(ENABLE_BROWSER_PROXYING);
+        optionParser.accepts(TRUST_PROXY_TARGET, "Trust any certificate presented by this origin when browser proxying").availableIf(ENABLE_BROWSER_PROXYING).availableUnless(TRUST_ALL_PROXY_TARGETS).withRequiredArg();
+        optionParser.accepts(HTTPS_CA_KEYSTORE, "Path to an alternative keystore containing a Certificate Authority private key & certificate for generating certificates when proxying HTTPS. Password is assumed to be \"password\" if not specified.").availableIf(ENABLE_BROWSER_PROXYING).withRequiredArg().defaultsTo(DEFAULT_CA_KEYSTORE_PATH);
+        optionParser.accepts(HTTPS_CA_KEYSTORE_PASSWORD, "Password for the alternative CA keystore.").availableIf(HTTPS_CA_KEYSTORE).withRequiredArg().defaultsTo(DEFAULT_CA_KESTORE_PASSWORD);
+        optionParser.accepts(HTTPS_CA_KEYSTORE_TYPE, "Type of the alternative CA keystore (jks or pkcs12).").availableIf(HTTPS_CA_KEYSTORE).withRequiredArg().defaultsTo("jks");
+        optionParser.accepts(LOAD_RESOURCES_FROM_CLASSPATH, "Specifies path on the classpath for storing recordings (parent for " + MAPPINGS_ROOT + " and " + WireMockApp.FILES_ROOT + " folders)").withRequiredArg();
 
-        optionParser.accepts(HELP, "Print this message");
+        optionParser.accepts(HELP, "Print this message").forHelp();
 
 		optionSet = optionParser.parse(args);
         validate();
 		captureHelpTextIfRequested(optionParser);
 
-        fileSource = new SingleRootFileSource((String) optionSet.valueOf(ROOT_DIR));
-        mappingsSource = new JsonFileMappingsSource(fileSource.child(MAPPINGS_ROOT));
+        if (optionSet.has(LOAD_RESOURCES_FROM_CLASSPATH)) {
+            fileSource = new ClasspathFileSource((String) optionSet.valueOf(LOAD_RESOURCES_FROM_CLASSPATH));
+        } else {
+            fileSource = new SingleRootFileSource((String) optionSet.valueOf(ROOT_DIR));
+        }
 
-        resultingPort = Optional.absent();
+        mappingsSource = new JsonFileMappingsSource(fileSource.child(MAPPINGS_ROOT));
+        extensions = buildExtensions();
+
+        actualHttpPort = null;
 	}
 
+	private Map<String, Extension> buildExtensions() {
+        ImmutableMap.Builder<String, Extension> builder = ImmutableMap.builder();
+        if (optionSet.has(EXTENSIONS)) {
+            String classNames = (String) optionSet.valueOf(EXTENSIONS);
+            builder.putAll(ExtensionLoader.load(classNames.split(",")));
+        }
+
+        if (optionSet.has(GLOBAL_RESPONSE_TEMPLATING)) {
+            contributeResponseTemplateTransformer(builder, true);
+        } else if (optionSet.has(LOCAL_RESPONSE_TEMPLATING)) {
+            contributeResponseTemplateTransformer(builder, false);
+        }
+
+        return builder.build();
+    }
+
+    private void contributeResponseTemplateTransformer(ImmutableMap.Builder<String, Extension> builder, boolean global) {
+        ResponseTemplateTransformer transformer = ResponseTemplateTransformer.builder()
+                .global(global)
+                .maxCacheEntries(getMaxTemplateCacheEntries())
+                .permittedSystemKeys(getPermittedSystemKeys())
+                .build();
+        builder.put(transformer.getName(), transformer);
+    }
+
     private void validate() {
-        if (optionSet.has(HTTPS_KEYSTORE) && !optionSet.has(HTTPS_PORT)) {
-            throw new IllegalArgumentException("HTTPS port number must be specified if specifying the keystore path");
+        if (optionSet.has(PORT) && optionSet.has(DISABLE_HTTP)) {
+            throw new IllegalArgumentException("The HTTP listener can't have a port set and be disabled at the same time");
+        }
+        if (!optionSet.has(HTTPS_PORT) && optionSet.has(DISABLE_HTTP)) {
+            throw new IllegalArgumentException("HTTPS must be enabled if HTTP is not.");
         }
 
         if (optionSet.has(RECORD_MAPPINGS) && optionSet.has(DISABLE_REQUEST_JOURNAL)) {
@@ -194,7 +271,7 @@ public class CommandLineOptions implements Options {
             Class<?> cls = loader.loadClass(
                     "com.github.tomakehurst.wiremock.jetty9.JettyHttpServerFactory"
             );
-            return (HttpServerFactory) cls.newInstance();
+            return (HttpServerFactory) cls.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             return throwUnchecked(e, null);
         }
@@ -218,9 +295,18 @@ public class CommandLineOptions implements Options {
         return DEFAULT_PORT;
 	}
 
-	public void setResultingPort(int port) {
-		resultingPort = Optional.of(port);
+    @Override
+    public boolean getHttpDisabled() {
+        return optionSet.has(DISABLE_HTTP);
+    }
+
+	public void setActualHttpPort(int port) {
+		actualHttpPort = port;
 	}
+
+	public void setActualHttpsPort(int port) {
+        actualHttpsPort = port;
+    }
 
     @Override
     public String bindAddress(){
@@ -237,8 +323,11 @@ public class CommandLineOptions implements Options {
                 .port(httpsPortNumber())
                 .keyStorePath((String) optionSet.valueOf(HTTPS_KEYSTORE))
                 .keyStorePassword((String) optionSet.valueOf(HTTPS_KEYSTORE_PASSWORD))
+                .keyStoreType((String) optionSet.valueOf(HTTPS_KEYSTORE_TYPE))
+                .keyManagerPassword((String) optionSet.valueOf(HTTPS_KEY_MANAGER_PASSWORD))
                 .trustStorePath((String) optionSet.valueOf(HTTPS_TRUSTSTORE))
                 .trustStorePassword((String) optionSet.valueOf(HTTPS_TRUSTSTORE_PASSWORD))
+                .trustStoreType((String) optionSet.valueOf(HTTPS_TRUSTSTORE_TYPE))
                 .needClientAuth(optionSet.has(REQUIRE_CLIENT_CERT)).build();
     }
 
@@ -261,6 +350,10 @@ public class CommandLineOptions implements Options {
 
         if (optionSet.hasArgument(JETTY_STOP_TIMEOUT)) {
             builder = builder.withStopTimeout(Long.parseLong((String) optionSet.valueOf(JETTY_STOP_TIMEOUT)));
+        }
+
+        if (optionSet.hasArgument(JETTY_IDLE_TIMEOUT)) {
+            builder = builder.withIdleTimeout(Long.parseLong((String) optionSet.valueOf(JETTY_IDLE_TIMEOUT)));
         }
 
         return builder.build();
@@ -301,24 +394,7 @@ public class CommandLineOptions implements Options {
     @Override
     @SuppressWarnings("unchecked")
     public <T extends Extension> Map<String, T> extensionsOfType(final Class<T> extensionType) {
-        ImmutableMap.Builder<String, T> builder = ImmutableMap.builder();
-        if (optionSet.has(EXTENSIONS)) {
-            String classNames = (String) optionSet.valueOf(EXTENSIONS);
-            builder.putAll ((Map<String, T>) Maps.filterEntries(ExtensionLoader.load(
-                classNames.split(",")),
-                valueAssignableFrom(extensionType))
-            );
-        }
-
-        if (optionSet.has(GLOBAL_RESPONSE_TEMPLATING) && ResponseDefinitionTransformer.class.isAssignableFrom(extensionType)) {
-            ResponseTemplateTransformer transformer = new ResponseTemplateTransformer(true);
-            builder.put(transformer.getName(), (T) transformer);
-        } else if (optionSet.has(LOCAL_RESPONSE_TEMPLATING) && ResponseDefinitionTransformer.class.isAssignableFrom(extensionType)) {
-            ResponseTemplateTransformer transformer = new ResponseTemplateTransformer(false);
-            builder.put(transformer.getName(), (T) transformer);
-        }
-
-        return builder.build();
+        return (Map<String, T>) Maps.filterEntries(extensions, valueAssignableFrom(extensionType));
     }
 
     @Override
@@ -354,9 +430,13 @@ public class CommandLineOptions implements Options {
         return new PlainTextStubNotMatchedRenderer();
     }
 
+    /**
+     * @deprecated use {@link BrowserProxySettings#enabled()}
+     */
+    @Deprecated
     @Override
     public boolean browserProxyingEnabled() {
-		return optionSet.has(ENABLE_BROWSER_PROXYING);
+		return browserProxySettings().enabled();
 	}
 
     @Override
@@ -392,7 +472,7 @@ public class CommandLineOptions implements Options {
     public boolean requestJournalDisabled() {
         return optionSet.has(DISABLE_REQUEST_JOURNAL);
     }
-    
+
     public boolean bannerDisabled() {
         return optionSet.has(DISABLE_BANNER);
     }
@@ -421,12 +501,17 @@ public class CommandLineOptions implements Options {
     @Override
     public String toString() {
         ImmutableMap.Builder<String, Object> builder = ImmutableMap.builder();
-        int port = resultingPort.isPresent() ? resultingPort.get() : portNumber();
-        builder.put(PORT, port);
+
+        if (actualHttpPort != null) {
+            builder.put(PORT, actualHttpPort);
+        }
+
+        if (actualHttpsPort != null) {
+            builder.put(HTTPS_PORT, actualHttpsPort);
+        }
 
         if (httpsSettings().enabled()) {
-            builder.put(HTTPS_PORT, nullToString(httpsSettings().port()))
-                   .put(HTTPS_KEYSTORE, nullToString(httpsSettings().keyStorePath()));
+            builder.put(HTTPS_KEYSTORE, nullToString(httpsSettings().keyStorePath()));
         }
 
         if (!(proxyVia() == NO_PROXY)) {
@@ -437,8 +522,20 @@ public class CommandLineOptions implements Options {
                    .put(PRESERVE_HOST_HEADER, shouldPreserveHostHeader());
         }
 
-        builder.put(ENABLE_BROWSER_PROXYING, browserProxyingEnabled());
-        
+        BrowserProxySettings browserProxySettings = browserProxySettings();
+
+        builder.put(ENABLE_BROWSER_PROXYING, browserProxySettings.enabled());
+        if (browserProxySettings.enabled()) {
+            KeyStoreSettings keyStoreSettings = browserProxySettings.caKeyStore();
+            builder.put(TRUST_ALL_PROXY_TARGETS, browserProxySettings.trustAllProxyTargets());
+            List<String> trustedProxyTargets = browserProxySettings.trustedProxyTargets();
+            if (!trustedProxyTargets.isEmpty()) {
+                builder.put(TRUST_PROXY_TARGET, Joiner.on(", ").join(trustedProxyTargets));
+            }
+            builder.put(HTTPS_CA_KEYSTORE, keyStoreSettings.path());
+            builder.put(HTTPS_CA_KEYSTORE_TYPE, keyStoreSettings.type());
+        }
+
         builder.put(DISABLE_BANNER, bannerDisabled());
 
         if (recordMappingsEnabled()) {
@@ -493,6 +590,61 @@ public class CommandLineOptions implements Options {
     @Override
     public AsynchronousResponseSettings getAsynchronousResponseSettings() {
         return new AsynchronousResponseSettings(isAsynchronousResponseEnabled(), getAsynchronousResponseThreads());
+    }
+
+    @Override
+    public ChunkedEncodingPolicy getChunkedEncodingPolicy() {
+        return optionSet.has(USE_CHUNKED_ENCODING) ?
+                ChunkedEncodingPolicy.valueOf(optionSet.valueOf(USE_CHUNKED_ENCODING).toString().toUpperCase()) :
+                ChunkedEncodingPolicy.ALWAYS;
+    }
+
+    @Override
+    public boolean getGzipDisabled() {
+        return optionSet.has(DISABLE_GZIP);
+    }
+
+    @Override
+    public boolean getStubRequestLoggingDisabled() {
+        return optionSet.has(DISABLE_REQUEST_LOGGING);
+    }
+
+    @Override
+    public boolean getStubCorsEnabled() {
+        return optionSet.has(ENABLE_STUB_CORS);
+    }
+
+    @SuppressWarnings("unchecked")
+    @Override
+    public BrowserProxySettings browserProxySettings() {
+        KeyStoreSettings keyStoreSettings = new KeyStoreSettings(
+                KeyStoreSourceFactory.getAppropriateForJreVersion(
+                        (String) optionSet.valueOf(HTTPS_CA_KEYSTORE),
+                        (String) optionSet.valueOf(HTTPS_CA_KEYSTORE_TYPE),
+                        ((String) optionSet.valueOf(HTTPS_CA_KEYSTORE_PASSWORD)).toCharArray()
+                )
+        );
+
+        return new BrowserProxySettings.Builder()
+                .enabled(optionSet.has(ENABLE_BROWSER_PROXYING))
+                .trustAllProxyTargets(optionSet.has(TRUST_ALL_PROXY_TARGETS))
+                .trustedProxyTargets((List<String>) optionSet.valuesOf(TRUST_PROXY_TARGET))
+                .caKeyStoreSettings(keyStoreSettings)
+                .build();
+    }
+
+    private Long getMaxTemplateCacheEntries() {
+        return optionSet.has(MAX_TEMPLATE_CACHE_ENTRIES) ?
+                Long.valueOf(optionSet.valueOf(MAX_TEMPLATE_CACHE_ENTRIES).toString()) :
+                null;
+    }
+
+    @SuppressWarnings("unchecked")
+    @VisibleForTesting
+    public Set<String> getPermittedSystemKeys() {
+        return optionSet.has(PERMITTED_SYSTEM_KEYS) ?
+                ImmutableSet.copyOf((List<String>) optionSet.valuesOf(PERMITTED_SYSTEM_KEYS)) :
+                Collections.<String>emptySet();
     }
 
     private boolean isAsynchronousResponseEnabled() {
